# MultifunctionTerminal

./: CMakeLists.txt  DynamicBackround.qml  DynamicClock.qml  HomeFlow.qml  README.md  ShadowCard.qml  SmartHomePage.qml  StackSwith.qml  SuspendRoundToolbar.qml  VideoPlayerPage.qml  WeatherLines.qml  WeatherPage.qml  main.cpp  main.qml  qml.qrc  videooutput.cpp  videooutput.h  weatherserver.cpp  weatherserver.h
Global/: Theme.qml
mediumDecode/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  bufferqueue.h  videodecoder.cpp  videodecoder.h
